--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #020303;
+    background-color: #f8f9fa;
     padding: 10px 20px;
     border-bottom: 1px solid #e7e7e7;
 }
